Ensure proper color contrast according to WCAG AA

--- a/apps/files/css/detailsView.scss
+++ b/apps/files/css/detailsView.scss
@@ -100,7 +100,7 @@
 }
 
 #app-sidebar .file-details {
-	color: #999;
+	color: $color-text-details;
 }
 
 #app-sidebar .action-favorite {
