--- a/core/css/variables.scss
+++ b/core/css/variables.scss
@@ -7,6 +7,11 @@ $color-warning: #ffcc44;
 $color-success: #46ba61;
 $color-primary-element: $color-primary;
 
+// rgb(118, 118, 118) / #767676
+// min. color contrast for normal text on white background according to WCAG AA
+// (Works as well: color: #000; opacity: 0.57;)
+$color-text-details: #767676;
+
 @function nc-darken($color, $value) {
   @return darken($color, $value);
 }
